chore: prepare release v1.1 — list short summary

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 streamlit
-langchain
-langchain-community
-chromadb
 python-dotenv
 SQLAlchemy
-langchain-text-splitters
-google-generativeai
-langchain-google-genai
-langchain-groq
+chromadb
 groq
+openai
+langchain
+langchain-community
+google-generativeai
+langchain-text-splitters
+langchain-groq
+langchain-ollama
+langchain-google-genai
